frontend/src/Pages/SearchPage.module.scss
.search {
  text-align: right;
  margin-top: 16px;

  @media only screen and (min-width: 1180px) {
    & {
      margin-top: -64px;
      input[type='submit'],
      input[type='search'], {
        z-index: 100;
      }
    }

    .stats {
      z-index: 100;
      position: relative;
    }
  }

  form {
    display: flex;
    margin-bottom: 16px;
  }

  input[type='text'],
  input[type='search']
  {
    width: 100%;
    display: block;
    box-sizing: border-box;
    padding: 5px;
    font-size: 24px;
    margin-right: 8px;
  }

  .error {
    color: var(--danger);
    &::before {
      display: inline;
      content: "⚠ ";
    }
  }

  .results {
    text-align: left !important;
  }

  .stats {
    margin-bottom: 40px;
    color: var(--fgSofter);
  }

  .resultItem {
    margin-bottom: 40px;

    h3 {
      margin-bottom: 0;
    }

    p {
      margin: 0;
      white-space: break-spaces;
      overflow-wrap: break-word;
    }

    .meta {
      font-size: smaller;
      display: flex;

      :global(.i-user) {
        margin-right: 10px;
      }

      .date {
        margin-right: 10px;
      }
    }
  }
}

